syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcdemo.proto";

package com.example.grpcdemo;

service BookService {
  rpc GetBook (GetBookRequest) returns (Book) {}
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse) {}
}

message GetBookRequest {
  string id = 1;
}

message ListBooksRequest {}

message ListBooksResponse {
  repeated Book books = 1;
}

message Book {
  string id = 1;
  string name = 2;
  int32 page_count = 3;
  string author_name = 4;
}